--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,4 @@ android.enableJetifier=true
 android.useAndroidX=true
 android.enableR8=true
 org.gradle.jvmargs=-Xms2048m -Xmx8192m
+org.gradle.daemon=true
